--- a/RPGVXAcecn/intro/200_index.html
+++ b/RPGVXAcecn/intro/200_index.html
@@ -1,26 +1,38 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html lang="ja">
+<html lang="en">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=Shift_JIS">
-<meta http-equiv="Content-Style-Type" content="text/css">
-<title>夝撉曇</title>
-<link href="../style.css" type="text/css" rel="stylesheet">
+
+  <meta http-equiv="Content-Type" content="text/html; charset=GB2312">
+
+  <meta http-equiv="Content-Style-Type" content="text/css">
+
+
+  <title>解读篇</title>
+  <link href="style.css" type="text/css" rel="stylesheet">
+
 </head>
+
+
 <body>
 
-<h1>夝撉曇</h1>
+
+<h1>解读篇</h1>
+
 
 <ul>
-      <li><a href="201_database.html">僨乕僞儀乕僗</a></li>
-      <li><a href="202_vocab.html">Vocab 儌僕儏乕儖</a></li>
-      <li><a href="203_sound.html">Sound 儌僕儏乕儖</a></li>
-      <li><a href="204_cache.html">Cache 儌僕儏乕儖</a></li>
-      <li><a href="205_gameobjects.html">僎乕儉僆僽僕僃僋僩</a></li>
-      <li><a href="206_sprites.html">僗僾儔僀僩偺娗棟</a></li>
-      <li><a href="207_windows.html">僂傿儞僪僂偺娗棟</a></li>
-      <li><a href="208_scene.html">僔乕儞偺娗棟</a></li>
+  <li><a href="201_database.html">数据库</a></li>
+  <li><a href="202_vocab.html">语言模块</a></li>
+  <li><a href="203_sound.html">声音模块</a></li>
+  <li><a href="204_cache.html">Cache缓存模块</a></li>
+  <li><a href="205_gameobjects.html">游戏对像</a></li>
+  <li><a href="206_sprites.html">精灵的管理</a></li>
+  <li><a href="207_windows.html">窗口的管理</a></li>
+  <li><a href="208_scene.html">场景类</a></li>
 </ul>
 
+
 <h6></h6>
+
+
 </body>
 </html>
