--- a/RPGVXAcecn/intro/102_number.html
+++ b/RPGVXAcecn/intro/102_number.html
@@ -1,145 +1,74 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html lang="ja">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=Shift_JIS">
-<meta http-equiv="Content-Style-Type" content="text/css">
-<title>悢抣偺寁嶼</title>
-<link href="../style.css" type="text/css" rel="stylesheet">
-</head>
-<body>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
+<HTML lang=en><HEAD><TITLE>数值的计算</TITLE>
+<META http-equiv=Content-Type content="text/html; charset=GB2312">
+<META http-equiv=Content-Style-Type content=text/css><LINK href="style.css" 
+type=text/css rel=stylesheet>
 
-<h1>悢抣偺寁嶼</h1>
-<ul>
-<li><a href="#console">僐儞僜乕儖偺昞帵</a></li>
-<li><a href="#number">悢抣</a></li>
-<li><a href="#display">昞帵</a></li>
-<li><a href="#calculate">寁嶼偺曽朄</a></li>
-</ul>
-
-<p>Ruby 偵偍偗傞悢抣傗寁嶼偺婎慴傪夝愢偟傑偡丅
-椺偲偟偰揹戩偺傛偆偵娙扨側寁嶼傪巊偭偰夝愢偟偰偄偒傑偟傚偆丅</p>
-
-
-<h2><a name="console">僐儞僜乕儖偺昞帵</a></h2>
-<img src="img/console.png" alt="悢抣偺昞帵" class="float_r">
-<p>嵟弶偵丄VX Ace 偺乵僎乕儉乶儊僯儏乕偐傜乵僐儞僜乕儖偺昞帵乶偵僠僃僢僋傪
-擖傟偰偔偩偝偄丅偙偺僆僾僔儑儞傪桳岠偵偡傞偲丄僥僗僩僾儗僀傪幚峴偟偨偲偒丄
-僎乕儉僂傿儞僪僂偲摨帪偵僐儞僜乕儖僂傿儞僪僂偑奐偔傛偆偵側傝傑偡丅</p>
-<p>僐儞僜乕儖僂傿儞僪僂偼丄暥帤忣曬傪昞帵偡傞偨傔偺愱梡偺僂傿儞僪僂偱偡丅
-僨僶僢僌帪側偳偵丄揔媂暥帤傪昞帵偟偰摦嶌傪僠僃僢僋偡傞偺偑庡側巊梡栚揑偲
-側傝傑偡丅幚嵺偺姰惉偟偨僎乕儉偱昞帵偝傟傞偙偲偼偁傝傑偣傫丅</p>
-
-
-<h2><a name="number">悢抣</a></h2>
-<p>Ruby 偱埖偊傞悢抣偵偼丄<strong>惍悢</strong>偲<strong>晜摦彫悢揰
-悢</strong>偺 2 庬椶偑偁傝傑偡丅</p>
-<pre>
-3           # 惍悢
-52          # 惍悢
--99         # 惍悢
-1.5         # 晜摦彫悢揰悢
-3.0         # 晜摦彫悢揰悢
-</pre>
-<p>晜摦彫悢揰悢偲偄偆偺偼丄庡偵彫悢揰埲壓偺寁嶼偑昁梫側偲偒偵巊梡偡傞
-悢偱偡丅摨偠悢偱傕 3 偲彂偗偽惍悢偲偟偰丄3.0 偲彂偗偽晜摦彫悢揰悢偲偟
-偰埖傢傟傑偡丅惍悢偺傎偆偑寁嶼偑崅懍側偨傔丄彫悢揰埲壓偑晄梫側応崌偵偼
-惍悢傪巊梡偟傑偡丅</p>
-<p>拲堄偲偟偰丄偨偲偊偽 15 傪昞尰偡傞偲偒偵 015 偲偄偆傛偆偵愭摢偵 0 傪
-偮偗偰彂偄偰偼偄偗傑偣傫丅偙偺応崌偼 8 恑悢偲夝庍偝傟丄暿偺堄枴偵側偭偰
-偟傑偄傑偡丅8 恑悢偲偼壗偐偲偄偆愢柧偼徣棯偟傑偡偑丄晛捠偵悢帤傪彂偔
-偲偒偵偼愭摢偵 0 傪偮偗側偄偲偄偆偙偲傪妎偊偰偍偄偰偔偩偝偄丅</p>
-
-
-<h2><a name="display">昞帵</a></h2>
-<img src="img/image3.png" alt="悢抣偺昞帵" class="float_r">
-<p>悢抣傪僐儞僜乕儖偵昞帵偟偰傒傑偟傚偆丅壗偐偺抣傪昞帵偟偨偄偲偒
-偼丄<strong>p</strong> 偲偄偆柦椷傪巊偄傑偡丅</p>
-<p>彫暥帤偺 p丄敿妏僗儁乕僗丄昞帵偟偨偄抣偺弴偵擖椡偟偰夵峴偟偰偔偩
-偝偄丅崱屻偄傠偄傠側柦椷傗婰崋偑弌偰偒傑偡偑丄僐儊儞僩側偳傪彍偄偰偼
-偡傋偰敿妏暥帤偱擖椡偡傞昁梫偑偁傝傑偡丅偆偭偐傝慡妏僗儁乕僗側偳傪擖傟
-偰偟傑偆偲丄敪尒偟偵偔偄僄儔乕偵側傝傑偡偺偱拲堄偟傑偟傚偆丅</p>
-<pre>
-p 3
-</pre>
-<p>偆傑偔偄偗偽丄僐儞僜乕儖僂傿儞僪僂偵 3 偲昞帵偝傟傞偼偢偱偡丅
-偙偺 p 偲偄偆柦椷偼僨僶僢僌帪偵傛偔巊傢傟傑偡偑丄曌嫮偺偨傔偵悢抣
-側偳傪昞帵偡傞栚揑偵傕曋棙偱偡丅</p>
-<p>側偍丄p 娭悢偼 RGSS2 傑偱偼儊僢僙乕僕儃僢僋僗偵昞帵偡傞傛偆偵側偭偰
-偄傑偟偨偑丄偙偺巇條偼 RGSS3 偱曄峏偝傟傑偟偨丅
-廬棃偺傛偆偵儊僢僙乕僕儃僢僋僗偵昞帵偟偨偄応崌偼丄msgbox
-娭悢傪巊梡偟偰偔偩偝偄丅</p>
-
-
-<h2><a name="calculate">寁嶼偺曽朄</a></h2>
-<p>Ruby 偵寁嶼傪偝偣偰傒傑偟傚偆丅</p>
-<pre>
-p 1 + 1             # 壛嶼 (懌偟嶼)
-p 10 - 3            # 尭嶼 (堷偒嶼)
-p 7 * 5             # 忔嶼 (妡偗嶼)
-p 24 / 4            # 彍嶼 (妱傝嶼)
-</pre>
-<p>偙偺傛偆偵丄晛捠偺幃傪彂偗偽偦偺寢壥偑弌椡偝傟傑偡丅+ 傗 - 側偳偺
-婰崋偼<strong>墘嶼巕</strong>偲屇傃傑偡丅</p>
-<p>側偍丄僾儘僌儔儉偱偼丄妡偗嶼傪 *丄妱傝嶼傪 / 偱昞偟傑偡丅
-姷傟偰偄側偄曽偼丄廳梫側偙偲側偺偱妎偊偰偍偒傑偟傚偆丅</p>
-
-
-<h3>桪愭弴埵</h3>
-<p>晛捠偺寁嶼偲摨偠傛偆偵丄* 偲 / 偼 + 偲 - 傛傝傕桪愭偝傟傑偡丅
-偙偺弴彉傪曄偊偨偄偲偒偼僇僢僐 ( ) 傪巊偭偰寁嶼偟傑偡丅</p>
-<pre>
-p 2 * 2 + 3 * 4     # =&gt; 16
+<META content="MSHTML 6.00.2900.3199" name=GENERATOR></HEAD>
+<BODY>
+<H1>数值的计算</H1>
+<UL>
+  <li><a href="#console">コンソールの表示</a></li>
+  <LI><A href="#number">数值</A> 
+  <LI><A href="#display">显示数值</A> 
+  <LI><A href="#calculate">计算方法</A> </LI></UL>
+<P>是关于 Ruby 中数字和计算的基础知识。作为例子将使用计算器那样简单的计算来解说。</P>
+<h2><a name="console">コンソールの表示</a></h2>
+<img src="img/console.png" alt="数値の表示" class="float_r">
+<p>最初に、VX Ace の［ゲーム］メニューから［コンソールの表示］にチェックを
+入れてください。このオプションを有効にすると、テストプレイを実行したとき、
+ゲームウィンドウと同時にコンソールウィンドウが開くようになります。</p>
+<p>コンソールウィンドウは、文字情報を表示するための専用のウィンドウです。
+デバッグ時などに、適宜文字を表示して動作をチェックするのが主な使用目的と
+なります。実際の完成したゲームで表示されることはありません。</p>
+<H2><A name=number>数值</A></H2>
+<P>Ruby 中能使用的数值，包括<STRONG>整数</STRONG>和<STRONG>浮点数</STRONG>两种。</P><PRE>3          # 整数
+52          # 整数
+-99         # 整数
+1.5         # 浮点数
+3.0         # 浮点数
+</PRE>
+<P>所谓浮点数，就是使用小数点以下计算的数。数值相同的话写作 3 是整数，而写作 3.0 
+即是浮点数。整数计算速度快，如果不需要小数点以下的话尽量使用整数。</P>
+<H2><A name=display>显示数值</A></H2>
+<P>即在画面上显示数值。想显示某些数值时，使用 <STRONG>p</STRONG> 命令。</P>
+<P>小写字母 
+p，半角字符，再把想要显示的数值按顺序输入后换行。今后会出现各种各样的命令和符号，除注释外其它一律使用半角输入。不小心输入全角字符的话，要注意发现错误。</P><PRE>p 3
+</PRE>
+<P>这个 p 命令可以在排除程序故障时使用，学习显示数值将会是十分有用的。</P>
+<P>运行这个程序，会看到在弹出的对话框中显示 3。原本 p 不是显示对话框的命令，但是游戏开发时特殊化的 RGSS 
+在没有其它输出地点时就会自动显示对话框。</P>
+<H2><A name=calculate>计算方法</A></H2>
+<P>在 Ruby 上进行计算吧。</P><PRE>p 1 + 1             # 加法
+p 10 - 3            # 减法
+p 7 * 5             # 乘法
+p 24 / 4            # 除法
+</PRE>
+<P>这样，写上普通算式就会输出计算的结果。+ 和 - 等符号称为<STRONG>运算符</STRONG>。</P>
+<P>另外还有乘法的 * 和除法的 /。不熟悉的人，一定要记住这些重点。</P>
+<H3>优先级</H3>
+<P>和普通的算式一样，* 和 / 计算要优先于 + 和 - 计算。想改变这个顺序就要使用括号 ( )，括号中的算式将会优先计算。</P><PRE>p 2 * 2 + 3 * 4     # =&gt; 16
 p 2 * (2 + 3) * 4   # =&gt; 40
 p 2 * (2 + 3 * 4)   # =&gt; 28
-</pre>
-<p>1 斣栚偺幃偼 4+12丄2 斣栚偺幃偼 2*5*4丄3 斣栚偺幃偼 2*14 偲夝庍偝傟傞
-偺偱丄偙偺傛偆偵堘偆寁嶼寢壥偵側傝傑偡丅</p>
-<p>僇僢僐偼壗廳偵傕廳偹傞偙偲偑偱偒傑偡 (擇廳嶰廳偵妵傞応崌偱傕巊偆婰崋偼
-摨偠偱偡) 丅</p>
-<p>側偍丄僒儞僾儖僾儘僌儔儉偺僐儊儞僩拞偵 =&gt; 偲偄偆婰崋偑巊傢傟偰偄傞
-偲偒偼丄庡偵偦偺峴偺弌椡寢壥傪昞偡傕偺偲偟傑偡丅偙傟偼愢柧傪傢偐傝傗偡偔
-偡傞偨傔偺曋媂揑側傕偺偱偡丅</p>
-
-
-<h3>彫悢揰埲壓偺寁嶼</h3>
-<p>惍悢傪惍悢偱妱偭偨応崌丄梋傝偼愗傝幪偰傜傟丄摎傕惍悢偵側傝傑偡丅
-彫悢揰埲壓偺摎傪弌偟偨偄応崌偼丄晜摦彫悢揰悢 (彫悢揰埲壓傪柧婰偟偨宍)
-傪巊梡偟傑偡丅</p>
-<pre>
-p 15 / 4            # =&gt; 3
-p 15.0 / 4.0        # =&gt; 3.75
-</pre>
-<p>妱傜傟傞悢偐妱傞悢偺偳偪傜偐偑堦曽偑晜摦彫悢揰悢側傜偽丄傕偆曅曽偑
-惍悢偱偁偭偰傕丄摎偼晜摦彫悢揰悢偵側傝傑偡丅</p>
-<pre>
+</PRE>
+<P>按优先级，示例第一行其实是 4+12，第二行是 2*5*4，第三行是 2*14，所以会是不同的计算结果。</P>
+<P>括号还可以多层重叠起来（即使是二层三层的情况也是使用同一个符号）。</P>
+<P>还有，示例程序的注释中使用 =&gt; 符号，主要是表示这行的输出结果。这是为了方便直观的理解而做的说明。</P>
+<H3>小数点以下的计算</H3>
+<P>整数除整数的情况下，会省略余数，答案将还是整数。想得到小数点以下的答案，就要使用到浮点数。除数或被除数至少要有一个是浮点数（明确标明了小数点以下），计算的答案就会是浮点数。</P><PRE>p 15 / 4            # =&gt; 3
 p 15.0 / 4          # =&gt; 3.75
 p 15 / 4.0          # =&gt; 3.75
-</pre>
-<p>忋婰偺椺偱 4 傗 15 偼惍悢偱偡偑丄晜摦彫悢揰悢偑擖偭偨幃偱
-偁傞偨傔丄偦傟偧傟 4.0丄15.0 偲傒側偝傟偰寁嶼偝傟傞偙偲偵側傝傑偡丅</p>
-
-
-<h3>忚梋偺寁嶼</h3>
-<p>忚梋 (妱傝嶼偺梋傝) 傪媮傔傞偵偼丄% 偲偄偆婰崋傪巊偄傑偡丅</p>
-<pre>
-p 14 % 4            # =&gt; 2
+</PRE>
+<H3>余数的计算（取模运算）</H3>
+<P>取模运算（求除法的余数），是使用 % 符号。</P><PRE>p 14 % 4            # =&gt; 2
 p 13 % 4            # =&gt; 1
 p 12 % 4            # =&gt; 0
-</pre>
-<p>偨偲偊偽 1 斣栚偺幃傪幚峴偟偨応崌丄14 傪 4 偱妱偭偨応崌偺梋傝偺悢丄
-偡側傢偪 2 偲偄偆悢抣偑寁嶼寢壥偲偟偰弌椡偝傟傑偡丅</p>
+</PRE>
+<P>运行示例第一行的算式，是求 14 除以 4 的余数，就会输出计算结果 2。</P>
+<H3>乘方的计算</H3>
+<P>没必要强迫记住，乘方（同一个数指定次数的相乘）是使用 ** 符号。</P><PRE>p 2 ** 4            # =&gt; 16
+</PRE>
+<P>这个示例求 2 的 4 次方，也就是计算 2*2*2*2。</P>
+<H6></H6>
+</BODY></HTML>
 
-
-<h3>傋偒忔偺寁嶼</h3>
-<p>柍棟偵妎偊傞昁梫偼偁傝傑偣傫偑丄傋偒忔 (摨偠悢傪巜掕夞悢偩偗妡偗嶼
-偟偨摎) 傪媮傔傞偵偼丄** 偲偄偆婰崋傪巊偄傑偡丅</p>
-<pre>
-p 2 ** 4            # =&gt; 16
-</pre>
-<p>偙偺椺偱偼 2 偺 4 忔丄偮傑傝 2*2*2*2 傪寁嶼偟偰偄傑偡丅</p>
-
-
-<h6></h6>
-
-</body>
-</html>
