--- a/RPGVXAcecn/intro/103_variable.html
+++ b/RPGVXAcecn/intro/103_variable.html
@@ -1,42 +1,38 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html lang="ja">
+<html lang="en">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=Shift_JIS">
+<meta http-equiv="Content-Type" content="text/html; charset=GB2312">
 <meta http-equiv="Content-Style-Type" content="text/css">
-<title>曄悢</title>
-<link href="../style.css" type="text/css" rel="stylesheet">
+<title>变量</title>
+<link href="style.css" type="text/css" rel="stylesheet">
 </head>
 <body>
 
-<h1>曄悢</h1>
+<h1>变量</h1>
 <ul>
-<li><a href="#name">曄悢偺柤慜</a></li>
-<li><a href="#subst">戙擖偲嶲徠</a></li>
-<li><a href="#self">帺屓戙擖</a></li>
-<li><a href="#global">僌儘乕僶儖曄悢</a></li>
+<li><a href="#name">变量的命名</a></li>
+<li><a href="#subst">赋值和引用</a></li>
+<li><a href="#self">自运算</a></li>
+<li><a href="#global">全局变量</a></li>
 <li><a href="#nil">nil</a></li>
 </ul>
 
-<p><strong>曄悢</strong>偲偼丄壗傜偐偺抣偵柤慜傪晅偗偨傕偺偱偡丅</p>
+<p>所谓<strong>变量</strong>，就是某些数值附上名称。是相对于常量的数据类型。</p>
 
 
-<h2><a name="name">曄悢偺柤慜</a></h2>
-<p>曄悢偼柤慜傪晅偗偰娗棟偝傟傑偡丅偨偲偊偽 x 傗 y丄偁傞偄偼傕偭偲挿偄
-level 偲偐 gold 偺傛偆側柤慜偱偡丅柤慜偺挿偝偵偼惂尷偑偁傝傑偣傫丅</p>
-<p>曄悢偵偼偄偔偮偐偺庬椶偑偁傝傑偡偑丄嵟弶偼傕偭偲傕婎杮揑
-側<strong>儘乕僇儖曄悢</strong>偺傒傪埖偄傑偡丅儘乕僇儖曄悢偲偄偆偺偼丄
-屻弎偡傞僌儘乕僶儖曄悢偺懳偵側傞尵梩偱丄尨懃偲偟偰僾儘僌儔儉偺堦晹偱偺傒
-乽儘乕僇儖偵乿棙梡壜擻側曄悢偺偙偲偱偡丅<p>
-<p>儘乕僇儖曄悢偺柤慜偺婯懃偼
-埲壓偺捠傝偱偡丅摿偵 1 斣栚偺忦審偵拲堄偟偰偔偩偝偄丅</p>
+<h2><a name="name">变量的命名</a></h2>
+<p>变量命名的管理。我们可以为变量取比如 x 和 y 或者更长的
+像 level 或 gold 这样的名称。名称的长度没有限制。</p>
+<p>变量有几个类型，首先我们来学习最基本的<strong>局部变量</strong>。
+局部变量的命名规则有以下几点。其中的第 1 条应该特别注意。</p>
 <ol>
-<li>愭摢偺暥帤偑丄塸彫暥帤傑偨偼 _ (傾儞僟乕僗僐傾) 偱偁傞偙偲丅</li>
-<li>擇斣栚埲崀偺暥帤偑塸帤丄悢帤丄傑偨偼 _ (傾儞僟乕僗僐傾) 偱偁傞偙偲丅</li>
-<li><strong>梊栺岅</strong>偱偼側偄偙偲丅</li>
+<li>第一个字符必须以小写英文字母或 _（下划线）开头。</li>
+<li>第二个字符开始可以使用英文字母、数字或 _（下划线）。</li>
+<li>不能使用<strong>保留字</strong>作变量的名称。</li>
 </ol>
 
-<p>梊栺岅偲偄偆偺偼埲壓偺傕偺偱偡丅偙傟傜偼 Ruby 偱摿暿側堄枴傪帩偮
-扨岅偲偟偰乽梊栺乿偝傟偰偄傞偺偱丄曄悢柤偲偟偰偼巊偊傑偣傫丅</p>
+<p>保留字是作为 Ruby 中具有特殊意义的词而被系统所「保留」，
+所以变量名称不能使用。以下就是系统的保留字。</p>
 <pre>
 alias    def      false    nil      return   unless
 and      do       for      not      self     until
@@ -46,102 +42,73 @@ case     end      module   rescue   true     yield
 class    ensure   next     retry    undef
 </pre>
 
-<p>忋婰埲奜側傜婎杮揑偵偳傫側柤慜偱傕巊偆偙偲偑偱偒傑偡丅</p>
-
-<p>椙偄椺:</p>
-<pre>
-foo
-tkool2000
-_test
-</pre>
-<p>埆偄椺:</p>
-<pre>
-2003tkool   # 悢帤偑愭摢偵棃偰偄傞
-Alex        # 戝暥帤偱巒傑偭偰偄傞
-def         # 梊栺岅傪巊偭偰偄傞
-</pre>
+<p>除上面列出的保留字以外，其它的词都可以作变量的名称。</p>
 
 
-<h2><a name="subst">戙擖偲嶲徠</a></h2>
-<p>幚嵺偵曄悢傪巊偭偰傒傑偟傚偆丅</p>
+<h2><a name="subst">赋值和引用</a></h2>
+<p>在实际中使用变量看看吧。</p>
 <pre>
 x = 3
 y = 4
-p x + y     # =&gt; 7
+p x + y     # => 7
 </pre>
-<p>1 峴栚偲 2 峴栚偱偼丄曄悢傊偺<strong>戙擖</strong>傪峴偭偰偄傑
-偡丅= 偲偄偆婰崋偼<strong>戙擖墘嶼巕</strong>偲偄偆傕偺偱偡丅
-悢妛偱巊偆摍崋偺傛偆偵乽嵍曈偲塃曈偑摍偟偄乿偲偄偆堄枴偱偼側偔丄
-乽嵍曈偺曄悢偑塃曈偺抣傪巜偡傛偆偵偡傞乿偲偄偆堄枴偵側傝傑偡丅
-忋婰偺椺偱偼丄1 峴栚偱 x 偲偄偆柤慜偺曄悢偵 3 偑丄2 峴栚偱 y 偲
-偄偆柤慜偺曄悢偵 4 偑偦傟偧傟戙擖偝傟傑偡丅</p>
-<p>3 峴栚偱偼丄曄悢 x 偲 y 傪<strong>嶲徠</strong>偟偰偄傑偡丅嶲徠
-偲偄偆偺偼丄偦偺曄悢偺抣傪庢摼偡傞偲偄偆偙偲偱偡丅曄悢偼捈愙悢抣傪
-彂偄偨応崌偲慡偔摨偠傛偆偵寁嶼側偳傪峴偆偙偲偑偱偒傑偡丅偙偙偱偼
-x + y 偲偄偆幃偼 3 + 4 偲夝庍偝傟丄寁嶼寢壥偼 7 偲側傝傑偡丅</p>
-<p>側偍丄堦搙傕戙擖偝傟偰偄側偄儘乕僇儖曄悢傪偄偒側傝嶲徠偟傛偆偲
-偡傞偲丄偦偺帪揰偱僄儔乕偵側偭偰偟傑偄傑偡丅</p>
+<p>第一行和第二行是进行变量的<strong>赋值</strong>。
+其中 = 号是<strong>赋值运算符</strong>。和数学上使用等号
+表示「左边等于右边」的意思不同，这里表示「左边的变量代入
+右边的数值」。在上述示例中，第一行 x 变量和第二行 y 变量
+分别代入数值 3 和 4。</p>
+<p>第三行是<strong>引用</strong>变量 x 和 y。所谓引用就是
+取得那个变量的数值。变量的计算和数字的计算方法完全一样。
+这里的 x + y 可以解释为 3 + 4，计算结果就为 7。</p>
+<p>另外，引用从未进行赋值的局部变量，就会使程序出现错误。</p>
 <pre>
 p zzz       # ERROR!!
 </pre>
-<p>曄悢偼丄壗偐傪戙擖偟偰偐傜巊偆傕偺偩偲妎偊偰偍偄偰偔偩偝偄丅</p>
+<p>请记住，变量一定要进行赋值后才能使用。</p>
 <pre>
 zzz = 5
-p zzz       # =&gt; 5
+p zzz       # => 5
 </pre>
-<p>偙偺傛偆偵丄1 峴栚偱 zzz 偲偄偆曄悢偵 5 傪戙擖偟偨偁偲偱偼丄嶲徠
-偡傞偙偲偑偱偒傞傛偆偵側傝傑偡丅</p>
+<p>这个示例中，第一行变量 zzz 为其赋值代入 5 后，第二行引用。</p>
 
 
-<h2><a name="self">帺屓戙擖</a></h2>
-<p>曄悢偑帺暘帺恎偺抣傪嶲徠偟丄寁嶼偟偨寢壥傪偁傜偨傔偰帺暘偵戙擖偡傞
-偙偲傪<strong>帺屓戙擖</strong>偲屇傃傑偡丅</p>
+<h2><a name="self">自运算</a></h2>
+<p>变量引用自己的数值，并再次代入计算结果称为<strong>自运算</strong>。</p>
 <pre>
 x = 1
 x += 7
 x -= 3
 x *= 2
-p x         # =&gt; 10
+p x         # => 10
 </pre>
-<p>2 峴栚偺 x += 7 偲偄偆偺偼丄x = x + 7 偲摨偠堄枴偱偡丅偮傑傝丄
-曄悢 x 偵 7 傪壛嶼偡傞偲偄偆偙偲偱偡丅摨條偵丄-=丄*=丄/=丄%= 側偳傕
-巊偆偙偲偑偱偒傑偡丅偙偺傛偆側墘嶼巕傪<strong>帺屓戙擖墘嶼巕</strong>偲
-屇傃傑偡丅</p>
-<p>帺屓戙擖偼丄僣僋乕儖偺曄悢偱峴偆寁嶼偺張棟偵峫偊曽偑帡偰偄傑偡丅
-偙偺椺偱偼丄傑偢 1 峴栚偱戙擖偟偨抣 1 偵 2 峴栚偱 7 傪懌偟偰偄傑偡丅
-偙偺帪揰偱 x 偺抣偼 8 偵側偭偰偄傑偡丅偝傜偵 3 傪堷偒丄嵟屻偵 2 傪
-妡偗偰偄傑偡偐傜丄寁嶼寢壥偼 10 偲側傞傢偗偱偡丅</p>
+<p>第二行的 x += 7 相当于 x = x + 7，总之就是向变量 x 里加上 7。
+同样 -=、*=、/=、%= 等也是如此使用。这些运算符就是<strong>自运算运算符</strong>。</p>
+<p>RPGXP 的变量进行自运算计算处理时思考方法都相似。
+这个示例中第一行是赋值直接代入 1，第二行加上 7，这时 x 的值其实是 8，
+第三行减去 3，第四行再乘以 2，最后的计算结果就是 10。</p>
 
 
-<h2><a name="global">僌儘乕僶儖曄悢</a></h2>
-<p>儘乕僇儖曄悢偼堦帪揑偵巊梡偡傞偨傔偺曄悢側偺偱丄娭悢傗僋儔僗側偳偺
-掕媊 (屻弎) 偐傜奜偵弌傞偲丄偦偺抣偼幐傢傟偰偟傑偄傑偡丅偙傟偵懳偟偰丄
-僾儘僌儔儉偺偳偙偐傜偱傕嶲徠偱偒傞<strong>僌儘乕僶儖曄悢</strong>偲偄偆
-傕偺偑偁傝傑偡丅僌儘乕僶儖曄悢偼丄僾儘僌儔儉拞偺偳偙偱巊傢傟偰偄偰傕丄
-摨偠柤慜偱偁傟偽丄昁偢摨偠曄悢偲偟偰埖傢傟傑偡丅</p>
-<p>師偺傛偆偵丄$ 偲偄偆暥帤偱巒傑傞曄悢偼僌儘乕僶儖曄悢偲偟偰埖傢傟傑偡丅
-戙擖側偳偺曽朄偼丄儘乕僇儖曄悢偲慡偔摨偠偱偡丅</p>
+<h2><a name="global">全局变量</a></h2>
+<p>局部变量是暂时使用的变量，只能在函数和类等定义（在后面讲述）内部使用，
+之外变量就无效。与之相对，在程序任何地方都能引用的就是<strong>全局变量</strong>。
+全局变量可以在程序中任何地方使用，名称相同，就必然是同一个变量。</p>
+<p>如下面的示例，以 $ 号开头的变量就作为全局变量使用。赋值方法和局部变量完全相同。</p>
 <pre>
 $global
 </pre>
-<p>偳偙偐傜偱傕嶲徠偱偒傞偐傜偲偄偭偰丄儘乕僇儖曄悢傛傝僌儘乕僶儖曄悢
-傪巊偭偨傎偆偑椙偄偲偄偆偙偲偱偼偁傝傑偣傫丅僌儘乕僶儖曄悢偼偦偺嫮椡偝
-備偊偵丄傓傗傒偵巊偆偲僾儘僌儔儉偑傢偐傝偵偔偔側偭偰偟傑偆嫲傟偑偁傝傑
-偡丅巊梡偡傞嵺偵偼廫暘拲堄偟傑偟傚偆丅</p>
-
+<p>虽然在任何地方都能引用，但使用全局变量不一定比局部变量好。
+全局变量十分强大，胡乱使用恐怕会使程序变得很难懂。请在使用时注意。</p>
 
 <h2><a name="nil">nil</a></h2>
-<p>僌儘乕僶儖曄悢偺応崌丄儘乕僇儖曄悢偲偼堎側傝丄堦搙傕戙擖偝傟偰偄側偄
-曄悢傪巊梡偟偰傕僄儔乕偵偼側傝傑偣傫丅</p>
+<p>グローバル変数の場合、ローカル変数とは異なり、一度も代入されていない
+変数を使用してもエラーにはなりません。</p>
 <pre>
 p $global   # =&gt; nil
 </pre>
-<p><strong>nil</strong> 偼乽壗傕側偄乿偲偄偆偙偲傪昞偟傑偡丅
-偙傟偼丄懠偵傕偝傑偞傑側嬊柺偱巊梡偝傟傞廳梫側抣偱偡丅
-傛偔妎偊偰偍偒傑偟傚偆丅</p>
-
+<p><strong>nil</strong> は「何もない」ということを表します。
+これは、他にもさまざまな局面で使用される重要な値です。
+よく覚えておきましょう。</p>
 
 <h6></h6>
-
 </body>
 </html>
