--- a/RPGVXAcecn/intro/111_hash.html
+++ b/RPGVXAcecn/intro/111_hash.html
@@ -1,143 +1,123 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html lang="ja">
+<html lang="en">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=Shift_JIS">
-<meta http-equiv="Content-Style-Type" content="text/css">
-<title>僴僢僔儏</title>
-<link href="../style.css" type="text/css" rel="stylesheet">
+
+  <meta http-equiv="Content-Type" content="text/html; charset=GB2312">
+
+  <meta http-equiv="Content-Style-Type" content="text/css">
+
+
+  <title>哈希表</title>
+  <link href="style.css" type="text/css" rel="stylesheet">
+
 </head>
+
+
 <body>
 
-<h1>僴僢僔儏</h1>
+
+<h1>哈希表</h1>
+
 <ul>
-<li><a href="#generate">僴僢僔儏偺惗惉</a></li>
-<li><a href="#add">僴僢僔儏傊偺抣偺捛壛</a></li>
-<li><a href="#manage">僴僢僔儏偺憖嶌</a></li>
-<li><a href="#loop">僴僢僔儏偵傛傞儖乕僾</a></li>
+
+  <li><a href="#generate">哈希表的生成</a></li>
+
+  <li><a href="#add">哈希表数值的添加</a></li>
+
+  <li><a href="#manage">哈希表的操作</a></li>
+
+  <li><a href="#loop">哈希表的循环</a></li>
+
 </ul>
 
-<p>攝楍偲傛偔帡偨僨乕僞峔憿偵<strong>僴僢僔儏</strong>偲偄偆傕偺偑
-偁傝傑偡丅</p>
+
+<p><strong>哈希表</strong>是一种和数组比较类似的数据构造形式。</p>
 
 
-<h2><a name="generate">僴僢僔儏偺惗惉</a></h2>
-<p>僴僢僔儏偼楢憐攝楍偲傕屇偽傟傑偡丅攝楍偲偺堘偄偼丄抣傪庢傝弌偡偨傔
-偺<strong>僉乕</strong> (攝楍偺揧帤偵憡摉偡傞傕偺) 偲偟偰丄擟堄偺
-僆僽僕僃僋僩傪巊梡偱偒傞偙偲偱偡丅僴僢僔儏偼 {} 偲偄偆婰崋偺拞偵
-梫慺傪暲傋傞偙偲偱惗惉偱偒傑偡丅</p>
-<pre>
-a = {&quot;傾儗僢僋僗&quot;=&gt;2000, &quot;僓僢僋&quot;=&gt;2003}
-</pre>
-<p>偙偺椺偱偼丄&quot;傾儗僢僋僗&quot; 偲 &quot;僓僢僋&quot; 偑抣傪庢傝弌偡
-偨傔偺僉乕偱丄2000 偲 2003 偑幚嵺偺抣偱偡丅偙偺傛偆偵丄僴僢僔儏傪捈愙惗惉
-偡傞偲偒偵偼 =&gt; 偲偄偆婰崋傪巊偭偰僉乕偲抣傪暲傋傑偡丅</p>
-<p>僴僢僔儏偺拞偺僆僽僕僃僋僩傪庢傝弌偡嵺偵偼丄偙偺傛偆偵偟傑偡丅</p>
-<pre>
-a = {&quot;傾儗僢僋僗&quot;=&gt;2000, &quot;僓僢僋&quot;=&gt;2003}
 
-p a[&quot;傾儗僢僋僗&quot;]        # =&gt; 2000
-p a[&quot;僓僢僋&quot;]            # =&gt; 2003
-p a[&quot;僂僒傄傚傫&quot;]        # =&gt; nil
-</pre>
-<p>嵟屻偺椺偐傜傢偐傞傛偆偵丄懚嵼偟側偄僉乕傪巜掕偟偨応崌偼 nil 偑曉傝
-傑偡丅</p>
-<p>偙偙偱偼暥帤楍傪僉乕偲偟傑偟偨偑丄傕偪傠傫暥帤楍偱側偔偰傕峔偄傑偣傫丅
-僉乕偲偟偰惍悢偟偐巊梡偟側偄僨乕僞偱傕丄偦偺斣崋偑旘傃旘傃偵側傞傛偆側
-応崌偵偼攝楍傛傝僴僢僔儏傪巊偭偨傎偆偑曋棙側偙偲偑偁傝傑偡丅</p>
-<p>側偍丄僴僢僔儏偺媡堷偒丄偮傑傝乽抣偵懳墳偡傞僉乕傪挷傋傞乿応崌偵偼
-[] 偺拞偵抣傪彂偄偰僉乕傪庢傝弌偡偙偲偼偱偒傑偣傫丅偙偙偱偼夝愢偟傑偣傫
-偑丄偦偺傛偆側憖嶌傪偡傞偨傔偺儊僜僢僪偼暿偵梡堄偝傟偰偄傑偡丅</p>
+<h2><a name="generate">哈希表的生成</a></h2>
+
+<p>哈希表也称为关联数组。和数组不同的是，作为取出数值 的<strong>主键</strong>（相当于数组的附加码），可以使用任意的对象。 在 {} 
+  符号中间排列多个单元就生成了一个哈希表。</p>
+
+<pre>a = {"阿莱库斯"=&gt;2000, "杰克"=&gt;2003}<br></pre>
+
+<p>这个例子中，"阿莱库斯" 和 "杰克" 就是取出数值的主 键，2000 和 2003 就是实际的数值。这样， 使用 =&gt; 符号把主键和数值连接起来就形成了 
+  哈希表。</p>
+
+<p>要取出 哈希表中对象的时候，应按如下操作。</p>
+
+<pre>a = {"阿莱库斯"=&gt;2000, "杰克"=&gt;2003}<br><br>p a["阿莱库斯"]        # =&gt; 2000<br>p a["杰克"]            # =&gt; 2003<br>p a["小白兔"]          # =&gt; nil<br></pre>
+
+<p>从上例最后一行可以得知，当指定主键不存在时就会返回 nil。</p>
+
+<p>这里是以字符串为主键，当然不使用字符串也可以。
+作为主键还可以使用整数等其它数据类型，
+在有很多编号单元的情况下使用哈希表会比使用数组更加方便。</p>
+
+<p>另外，哈希表的反操作，也就是「检查与数值对应的主键」的情况下，
+在 [] 中写入数值是不能得到其主键的。这里不再多作陈述，
+该种操作方法我们会在后面特别介绍。</p>
 
 
-<h2><a name="add">僴僢僔儏傊偺抣偺捛壛</a></h2>
-<p>幚嵺偵偼丄僴僢僔儏偼僾儘僌儔儉拞偱捈愙僨乕僞傪巜掕偟偰惗惉偡傞傛傝傕丄
-傑偢嬻偺僴僢僔儏傪嶌偭偰偍偄偰僨乕僞傪捛壛偟偰偄偔偙偲偺傎偆偑懡偄偐傕
-偟傟傑偣傫丅嬻偺僴僢僔儏傪惗惉偡傞偲偒偼丄扨偵 {} 偲彂偔偩偗偱偡丅</p>
-<pre>
-a = {}
-</pre>
-<p>攝楍偺梫慺偵戙擖偡傞偺偲慡偔摨偠傛偆偵丄僴僢僔儏偵抣傪捛壛偡傞偙偲偑
-偱偒傑偡丅</p>
-<pre>
-a = {}
-a[&quot;傾儗僢僋僗&quot;] = 2000
 
-p a                 # =&gt; {&quot;傾儗僢僋僗&quot;=&gt;2000}
-</pre>
+<h2><a name="add">哈希表数值的添加</a></h2>
+
+<p>实际操作中，哈希表可以在程序中直接指定数据建立， 亦可以使用先建立一个空的 哈希表然后向其中添加单元数据等多种方法生成。 生成一个空的 哈希
+  表只需写入 {} 就行了。</p>
+
+<pre>a = {}<br></pre>
+
+<p>向 哈希表中添加数值，和数组单元的重赋值完全相同。</p>
+
+<pre>a = {}<br>a["阿莱库斯"] = 2000<br><br>p a                 # =&gt; {"阿莱库斯"=&gt;2000}<br></pre>
 
 
-<h2><a name="manage">僴僢僔儏偺憖嶌</a></h2>
-<p>僴僢僔儏偼 <a href="../rgss/sc_hash.html">Hash</a> 僋儔僗偺
-僆僽僕僃僋僩偱偡丅攝楍偲摨偠傛偆偵丄偙偺僋儔僗偱掕媊偝傟偰偄傞
-儊僜僢僪傪屇傃弌偡偙偲偵傛偭偰僨乕僞偺憖嶌傪峴偆偙偲偑偱偒傑偡丅</p>
-<p>偨偲偊偽丄僴僢僔儏偐傜抣傪嶍彍偡傞応崌偼 delete 偲偄偆儊僜僢僪
-傪巊梡偟傑偡丅</p>
-<pre>
-a = {&quot;傾儗僢僋僗&quot;=&gt;2000, &quot;僓僢僋&quot;=&gt;2003}
-a.delete(&quot;僓僢僋&quot;)
 
-p a                 # =&gt; {&quot;傾儗僢僋僗&quot;=&gt;2000}
-</pre>
-<p>僴僢僔儏偑摿掕偺僉乕傪帩偭偰偄傞偐偳偆偐抦傝偨偄応崌偼丄include?
-偲偄偆儊僜僢僪傪巊梡偟傑偡丅</p>
-<pre>
-a = {&quot;傾儗僢僋僗&quot;=&gt;2000, &quot;僓僢僋&quot;=&gt;2003}
+<h2><a name="manage">哈希表的操作</a></h2>
 
-p a.include?(&quot;傾儗僢僋僗&quot;)    # =&gt; true
-p a.include?(&quot;僂僒傄傚傫&quot;)    # =&gt; false
-</pre>
-<p>3 峴栚偱偼 include? 儊僜僢僪傪巊偭偰丄僴僢僔儏偵
-&quot;傾儗僢僋僗&quot; 偲偄偆僉乕偑娷傑傟偰偄傞偐偳偆偐傪妋擣偟偰
-偄傑偡丅偙偺応崌丄1 峴栚偺僴僢僔儏偺惗惉偱 &quot;傾儗僢僋僗&quot; 偲
-偄偆僉乕偑愝掕偝傟偰偄傑偡偺偱丄true (恀) 偲弌椡偝傟傑偡丅
-摨偠偔 4 峴栚偱偼 &quot;僂僒傄傚傫&quot; 偲偄偆僉乕偑娷傑傟偰偄傞偐
-偳偆偐傪妋擣偟偰偄傑偡丅偦偺傛偆側僉乕偼懚嵼偟傑偣傫偺偱丄false (婾)
-偲弌椡偝傟傑偡丅</p>
+<p>哈希表是 <a href="../rgss/sc_hash.html">哈希</a>类的对象。 同数组一样，可以调用这个类定义的方法对数据进行操作。</p>
+
+<p>比如要从 哈希表中删除数值的话，就要使用 delete 方法。</p>
+
+<pre>a = {"阿莱库斯"=&gt;2000, "杰克"=&gt;2003}<br>a.delete("杰克")<br><br>p a                 # =&gt; {"阿莱库斯"=&gt;2000}<br></pre>
+
+<p>想知道 哈希表中是否含有某个特定主键的情况下，就要使用 include? 方法。</p>
+
+<pre>a = {"阿莱库斯"=&gt;2000, "杰克"=&gt;2003}<br><br>p a.include?("阿莱库斯")    # =&gt; true<br>p a.include?("小白兔")      # =&gt; false<br></pre>
+
+<p>第三行中使用 include? 方法，是确认哈希表中是否含有主键 "阿莱库斯"。
+上例在第一行生成哈希表时主键设定有 "阿莱库斯"，所以输出结果为 true（真）。
+同样第四行是确认哈希表中是否含有主键 "小白兔"。
+然而这个主键在哈希表中是不存在的，所以输出结果就为 false（伪）。</p>
 
 
-<h2><a name="loop">僴僢僔儏偵傛傞儖乕僾</a></h2>
-<p>Hash 僋儔僗偵偼丄僉乕偺堦棗傪攝楍偲偟偰庢摼偡傞 keys 偲偄偆
-儊僜僢僪偑偁傝傑偡丅</p>
-<pre>
-a = {3=&gt;6, 4=&gt;10, 5=&gt;15}
-p a.keys            # => [3, 4, 5]
-</pre>
-<p>偙偺傛偆偵丄=&gt; 偺嵍懁偵偁傞僉乕偺堦棗偑攝楍偲偟偰弌椡偝傟傑偡丅</p>
-<p>慜復<a href="110_array.html">攝楍</a>偺嵟屻偵妛廗偟偨<strong
->僀僥儗乕僞</strong>傪巊偭偰丄僴僢僔儏偺僉乕偵傛傞儖乕僾傪婰弎偱偒傑偡丅</p>
-<pre>
-a = {3=&gt;6, 4=&gt;10, 5=&gt;15}
 
-a.keys.each do |k|
-  p k
-end
-</pre>
-<p>偙傟傪幚峴偡傞偲 3丄4丄5 偑昞帵偝傟傑偡丅</p>
-<p>傑偨丄values 偲偄偆儊僜僢僪傪巊梡偡傟偽丄抣偺傎偆偺堦棗傪攝楍偲
-偟偰庢摼偱偒傑偡丅</p>
-<pre>
-a = {3=&gt;6, 4=&gt;10, 5=&gt;15}
+<h2><a name="loop">哈希表的循环</a></h2>
 
-a.values.each do |v|
-  p v
-end
-</pre>
-<p>偙傟傪幚峴偡傞偲 6丄10丄15 偑昞帵偝傟傑偡丅</p>
-<p>側偍丄屆偄僶乕僕儑儞偺 Ruby 偱偼僴僢僔儏偺奿擺弴彉偼晄掕
-偱偟偨偑丄RGSS3 偱嵦梡偟偰偄傞 Ruby 1.9 偐傜偼弴彉偑曐徹偝傟傞
-傛偆偵側傝傑偟偨丅</p>
-<pre>
-a = {3=&gt;6, 5=&gt;15, 4=&gt;10}
+<p>在哈希类中，有取得全部主键排列的 keys 方法。</p>
 
-a.keys.each do |k|
-  p k
-end
-</pre>
-<p>偨偲偊偽偙偺傛偆偵搊榐弴彉傪擖傟懼偊偨応崌丄弌椡偼昁偢
-3丄5丄4 偺弴偲側傝傑偡丅</p>
+<pre>a = {3=&gt;6, 4=&gt;10, 5=&gt;15}<br>p a.keys            # =&gt; [5, 3, 4]<br></pre>
+
+<p>这样，=&gt; 左侧的主键会全部排列出来。 但 哈希表中是没有顺序的，所以排列会无顺序可言。</p>
+
+<p>前节中，我们学习了使用 for 循环指定数组的方法。 现在让我们来用 for 循环指定 keys 方法的返回值，作成 哈希表主键的循环吧。</p>
+
+<pre>a = {3=&gt;6, 4=&gt;10, 5=&gt;15}<br><br>for k in a.keys<br>  p k<br>end<br></pre>
+
+<p>运行上例就会按不同顺序显示 3、4、5。</p>
+
+<p>而且，使用 values 方法的话，还能取得 哈希表全部数值的排列。</p>
+
+<pre>a = {3=&gt;6, 4=&gt;10, 5=&gt;15}<br><br>for v in a.values<br>  p v<br>end<br></pre>
+
+<p>运行上例就会按不同顺序显示 6、10、15。</p>
+
 
 
 <h6></h6>
+
+
 
 </body>
 </html>
